<resources>
    <string name="app_name" translatable="false">Shoe Store</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign up</string>
    <string name="enter_mail">Enter your e-mail</string>
    <string name="enter_password">Enter your password</string>
    <string name="plz_fill_fields">Please fill all the fields first!</string>
    <string name="welcome">Welcome</string>
    <string name="to_our_store">to our shoe store</string>
    <string name="next">Next</string>
    <string name="store_image">Store image</string>
    <string name="instructions">Instructions</string>
    <string name="instructions_to_follow">- To add a new shoe into your list press the \"\+\" button in the shoe list screen.\n\n- In the shoe details screen add your new shoe information, and then save the item to add it. \n\n- If you want to cancel this item press the cancel button instead of save button.</string>
    <string name="add_shoe">Add shoe</string>
    <string name="shoe_list">Shoe list</string>
    <string name="shoe_name">Shoe name:</string>
    <string name="company">Company:</string>
    <string name="size">Size:</string>
    <string name="description">Description:</string>
    <string name="shoe_name_">Shoe name</string>
    <string name="company_">Company</string>
    <string name="size_">Size</string>
    <string name="description_">Description</string>
    <string name="Enter_shoe_data">Enter shoe data</string>
    <string name="enter_shoe_name">Enter shoe name</string>
    <string name="enter_company">Enter company</string>
    <string name="enter_size">Enter shoe size</string>
    <string name="enter_description">Enter description</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="no_items">There is no items</string>
    <string name="added_to_list">Added to the list</string>
    <string name="shoe_details">Shoe details</string>
    <string name="logout">Logout</string>
    <string name="change_language">Change language</string>
</resources>