<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!--  Used Constraint layout because I can freely put the views in the place that I want, and can be
    used in the complex UI designs  -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_16dp"
        tools:context=".fragments.shoeDetails.ShoeDetailsFragment">

        <TextView
            android:id="@+id/tvEnterShoeData"
            style="@style/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Enter_shoe_data"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--  Scroll view is used because the views can be bigger than screen height -->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_16dp"
            android:fillViewport="true"
            android:overScrollMode="never"
            android:scrollbarSize="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvEnterShoeData">

            <!--  Used Linear Layout because it arranges the views as a single row horizontally / stack
            them vertically -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shoe_name_" />

                <EditText
                    android:id="@+id/etShoeName"
                    style="@style/input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_shoe_name"
                    android:inputType="textPersonName" />

                <TextView
                    style="@style/label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/company_" />

                <EditText
                    android:id="@+id/etCompany"
                    style="@style/input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_company"
                    android:inputType="textPersonName" />

                <TextView
                    style="@style/label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/size_" />

                <EditText
                    android:id="@+id/etShoeSize"
                    style="@style/input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_size"
                    android:inputType="number" />

                <TextView
                    style="@style/label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description_" />

                <EditText
                    android:id="@+id/etShoeDescription"
                    style="@style/input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_description"
                    android:inputType="textMultiLine" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnSave"
                    style="@style/button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_32dp"
                    android:background="@drawable/button_background"
                    android:text="@string/save" />

                <TextView
                    android:id="@+id/tvCancel"
                    style="@style/label2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/cancel"
                    android:textColor="@color/main_color" />

            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>